Set perms on downloaded secrets

--- a/tasks/ansible_secrets_get_secrets_from_s3.yml
+++ b/tasks/ansible_secrets_get_secrets_from_s3.yml
@@ -20,6 +20,11 @@
   fail: msg="{{ ansible_secrets_directory }}/{{ ansible_secrets_file }} file doesn't exist"
   when: not ansible_secrets_file_info.stat.exists
 
+- name: Set the owner/group on {{ ansible_secrets_directory }}/{{ ansible_secrets_file }}
+  file:
+    owner: "{{ ansible_secrets_username }}"
+    group: "{{ ansible_secrets_groupname }}"
+
 
 
 
