--- a/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
+++ b/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
@@ -1,30 +1,32 @@
 ---
 
-- name: Make sure there is no existing file called {{ ansible_secrets_directory }}/{{ ansible_secrets_file }}
+- name: Make sure there is no existing file called {{ playbook_dir }}/{{item.value.directory }}/{{ item.value.file }}
   file:
-    path: "{{ ansible_secrets_directory }}/{{ ansible_secrets_file }}"
+    path: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
     state: absent
+  with_dict: "{{ ansible_secrets_list }}"
 
 
-- name: Copy config file {{ ansible_secrets_file }} from localhost to {{ ansible_secrets_directory }}/{{ ansible_secrets_file }}
+- name: Copy config file {{ item.value.file }} from localhost to {{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}
   copy:
-    src: "{{ ansible_secrets_directory }}/{{ ansible_secrets_file }}"
-    dest: "{{ ansible_secrets_directory }}/{{ ansible_secrets_file }}"
+    src: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
+    dest: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
     owner: "{{ ansible_secrets_username }}"
     group: "{{ ansible_secrets_groupname }}"
     mode: 0400
   register: result
+  with_dict: "{{ ansible_secrets_list }}"
 
-- name: Check if the file exists
+- name: Check if {{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }} exists
   stat:
-    path: "{{ ansible_secrets_directory }}/{{ ansible_secrets_file }}"
+    path: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
   register: ansible_secrets_file_info
+  with_dict: "{{ ansible_secrets_list }}"
 
-
-- name: Fail if {{ ansible_secrets_directory }}/{{ ansible_secrets_file }} file doesn't exist
-  fail: msg="{{ ansible_secrets_directory }}/{{ ansible_secrets_file }} file doesn't exist"
-  when: not ansible_secrets_file_info.stat.exists
-
+- name: Fail if {{ item.item }} file doesn't exist
+  fail: msg="{{ item.item }} doesn't exist"
+  when: not item.stat.exists
+  with_dict: "{{ ansible_secrets_list }}"
 
 
 
