--- a/tasks/ansible_secrets_ensure_dir.yml
+++ b/tasks/ansible_secrets_ensure_dir.yml
@@ -2,8 +2,9 @@
 
 - name: Ensure secrets dir exists
   file:
-    path: "{{ ansible_secrets_directory }}"
+    path: "{{ playbook_dir }}/{{ item.value.directory }}"
     state: directory
     mode: 0755
     owner: "{{ ansible_secrets_username }}"
     group: "{{ ansible_secrets_groupname }}"
+  with_dict: "{{ ansible_secrets_list }}"
