--- a/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
+++ b/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
@@ -1,25 +1,25 @@
 ---
 
-- name: Make sure there is no existing file called {{ playbook_dir }}/{{item.value.directory }}/{{ item.value.file }}
+- name: Make sure there is no existing file called {{ ansible_secrets_dest_dir }}/{{item.value.directory }}/{{ item.value.file }}
   file:
-    path: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
+    path: "{{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
     state: absent
   with_dict: "{{ ansible_secrets_list }}"
 
 
-- name: Copy config file {{ item.value.file }} from localhost to {{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}
+- name: Copy config file {{ item.value.file }} from localhost to {{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }}
   copy:
     src: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
-    dest: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
+    dest: "{{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
     owner: "{{ ansible_secrets_username }}"
     group: "{{ ansible_secrets_groupname }}"
     mode: 0400
   register: result
   with_dict: "{{ ansible_secrets_list }}"
 
-- name: Check if {{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }} exists
+- name: Check if {{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }} exists
   stat:
-    path: "{{ playbook_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
+    path: "{{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
   register: ansible_secrets_file_info
   with_dict: "{{ ansible_secrets_list }}"
 
