--- a/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
+++ b/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
@@ -26,7 +26,7 @@
 - name: Fail if {{ item.item }} file doesn't exist
   fail: msg="{{ item.item }} doesn't exist"
   when: not item.stat.exists
-  with_dict: "{{ ansible_secrets_list }}"
+  with_items: "{{ ansible_secrets_file_info.results }}"
 
 
 
