--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,10 +6,10 @@
   include: ansible_secrets_ensure_dir.yml
   when: ansible_secrets_get_secrets_from_s3 is defined or ansible_secrets_get_secrets_from_bounce_node is defined
 
-- name: Download the secrets file to the git dir from s3
+- name: Download the secrets file to the dest dir from s3
   include: ansible_secrets_get_secrets_from_s3.yml
   when: ansible_secrets_get_secrets_from_s3 is defined
 
-- name: Download the secrets file to the git dir from bounce node
+- name: Download the secrets file to the dest dir from bounce node
   include: ansible_secrets_get_secrets_from_bounce_node.yml
   when: ansible_secrets_get_secrets_from_bounce_node is defined
