Make operations on lists single-pass    * use a list of dicts

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,3 +23,7 @@ ansible_secrets_groupname: vagrant
 # Where to find aws related stuff
 ansible_aws_paths:
   aws: /usr/local/bin/aws
+
+# Defaults
+ansible_secrets_get_secrets_from_bounce_node: false
+ansible_secrets_get_secrets_from_s3: false
