--- a/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
+++ b/tasks/ansible_secrets_get_secrets_from_bounce_node.yml
@@ -4,7 +4,7 @@
   file:
     path: "{{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
     state: absent
-  with_dict: "{{ ansible_secrets_list }}"
+  with_dict: "{{ ansible_secrets_dict }}"
 
 
 - name: Copy config file {{ item.value.file }} from localhost to {{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }}
@@ -15,13 +15,13 @@
     group: "{{ ansible_secrets_groupname }}"
     mode: 0400
   register: result
-  with_dict: "{{ ansible_secrets_list }}"
+  with_dict: "{{ ansible_secrets_dict }}"
 
 - name: Check if {{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }} exists
   stat:
     path: "{{ ansible_secrets_dest_dir }}/{{ item.value.directory }}/{{ item.value.file }}"
   register: ansible_secrets_file_info
-  with_dict: "{{ ansible_secrets_list }}"
+  with_dict: "{{ ansible_secrets_dict }}"
 
 - name: Fail if {{ item.item }} file doesn't exist
   fail: msg="{{ item.item }} doesn't exist"
