Speed up the process of getting secrets, by using the s3 module directly

--- a/tasks/ansible_secrets_ensure_dir.yml
+++ b/tasks/ansible_secrets_ensure_dir.yml
@@ -7,4 +7,4 @@
     mode: 0755
     owner: "{{ ansible_secrets_username }}"
     group: "{{ ansible_secrets_groupname }}"
-  with_dict: "{{ ansible_secrets_list }}"
+  with_dict: "{{ ansible_secrets_dict}}"
